sentiment_classifier_kubernetes_azure/.k8s/prod/patch-deployment-project_copy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project
          image: w255mids.azurecr.io/jgalvin/project:[TAG]
          resources:
            requests:
              cpu: 1500m
              memory: 3Gi
            limits:
              cpu: 1500m
              memory: 3Gi
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
