sentiment_classifier_kubernetes_azure/.k8s/prod/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: project
spec:
  hosts:
    - jgalvin.mids255.com
  gateways:
    - istio-ingress/jgalvin-gateway
  http:
    - match:
        - uri:
            exact: /predict
        - uri:
            prefix: /health
        - uri:
            prefix: /docs
        - uri:
            prefix: /openapi.json
      route:
        - destination:
            host: project
            port:
              number: 8000
